--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,24 @@
     </header>
     {% block content %} {% endblock %}
 
+    <div class="registration">
+        <h2 class="regh1">Register trainees here:</h2>
+        <div class="form">
+            <form>
+                <label for="name">Full name:  </label>
+                <input type="text" id="name" name="name">
+                <label for="cohort">Cohort:</label>
+                <select name="cohort" id="cohort">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="moms">Moms</option>
+                    <option value="cheetah">Cheetah</option>
+                </select>
+                <label for="credly">Credly link:</label>
+                <input type="text" id="credly" name="credly">
+                <input type="submit">
+            </form>
+        </div>
+    </div>
   </body>
 </html>
