--- a/badgefollowup/static/css/styles.css
+++ b/badgefollowup/static/css/styles.css
@@ -20,6 +20,23 @@ header {
 
 }
 
+.getinfo {
+    margin-top: 5em;
+    text-align: center;
+}
+
+.getinfo input, .getinfo select {
+    color: black;
+    border: solid #9fd3c7;
+    background-color: #ececec;
+}
+
+.getinfo input[type=submit] {
+    color: white;
+    border: solid #4CAF50;
+    background-color: #4CAF50;
+}
+
 .cohortchooser {
     padding-top: 5em;
     background-color: white;
@@ -29,6 +46,55 @@ header {
 .cohortchooser h1 {
     margin-bottom: 2em;
 }
+
+div.studentslist {
+    text-align: center;
+}
+
+table + table {
+    border-collapse: collapse;
+}
+
+table {
+    margin: 0 auto;
+    border: 2px solid black;
+}
+
+thead th, tbody td {
+    border: 1px solid black;
+}
+
+.trainees th {
+    text-align: center;
+    color: white;
+    background-color: #385170;
+}
+
+th, td {
+    padding-right: 3em;
+}
+
+.earned {
+    margin-top: 5em;
+}
+
+.earned th {
+    width: 100%;
+    text-align: center;
+    background-color: #385170;
+    color: white;
+}
+
+td {
+    padding-left: 5px;
+    text-align: left; 
+    background-color: #ececec;
+}
+
+tbody:nth-child(even) {
+    background-color: white;
+  }
+
 div.registration {
     text-align: center;
     position: fixed;
@@ -48,8 +114,12 @@ div.registration select option {
     color: black;
 }
 
-input, select {
+.registration input, .registration select {
     color: white;
     border: solid #9fd3c7;
 }
 
+.goback {
+    margin-top: 5em;
+    text-align: center;
+}
