--- a/badgefollowup/static/css/styles.css
+++ b/badgefollowup/static/css/styles.css
@@ -41,10 +41,11 @@ header {
     padding-top: 5em;
     background-color: white;
     text-align: center;
+    margin-bottom: 150px;
 }
 
 .cohortchooser h1 {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 
 div.studentslist {
